--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,6 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'com.gradleup.shadow' version '9.0.0-beta17'
     id 'org.cadixdev.licenser' version '0.6.1' apply false
-    id 'dev.architectury.loom' version '1.9-SNAPSHOT' apply false
-    id 'gg.essential.multi-version.root' apply false
     id 'org.ajoberstar.grgit' version '5.3.2'
     id 'maven-publish'
     id 'java'
@@ -58,10 +56,6 @@ publishing {
 }
 
 allprojects {
-    if (project.name == 'fabric') {
-        return
-    }
-
     apply plugin: 'com.gradleup.shadow'
     apply plugin: 'org.cadixdev.licenser'
     apply plugin: 'java'
@@ -76,7 +70,6 @@ allprojects {
         mavenLocal()
         mavenCentral()
         maven { url 'https://repo.william278.net/releases/' }
-        maven { url 'https://maven.fabricmc.net/' }
         maven { url 'https://libraries.minecraft.net/' }
         maven { url 'https://api.modrinth.com/maven' }
         maven { url 'https://repo.papermc.io/repository/maven-public/' }
@@ -117,11 +110,6 @@ allprojects {
 }
 
 subprojects {
-    // Ignore root fabric project (no jars)
-    if (project.name == 'fabric') {
-        return
-    }
-
     // Project naming
     version rootProject.version
     def name = "$rootProject.name"
@@ -131,13 +119,6 @@ subprojects {
         name += "-${project.name.capitalize()}"
     }
     archivesBaseName = name
-
-    // Fabric-specific configuration
-    if (project.parent?.name?.equals('fabric')) {
-        apply plugin: 'dev.architectury.loom'
-        compileJava.options.release.set 21
-        version += "+mc.${project.name}"
-    }
 
     jar {
         from '../LICENSE'
@@ -149,7 +130,7 @@ subprojects {
     }
 
     // API publishing
-    if (['common', 'bukkit'].contains(project.name) || project.parent?.name?.equals('fabric')) {
+    if (['common', 'bukkit'].contains(project.name)) {
         java {
             withSourcesJar()
             withJavadocJar()
@@ -183,19 +164,6 @@ subprojects {
                         artifactId = 'huskhomes-bukkit'
                         version = "$rootProject.version"
                         artifact shadowJar
-                        artifact sourcesJar
-                        artifact javadocJar
-                    }
-                }
-            }
-
-            if (project.parent?.name?.equals('fabric')) {
-                publications {
-                    "mavenJavaFabric_${project.name.replace('.', '_')}"(MavenPublication) {
-                        groupId = 'net.william278.huskhomes'
-                        artifactId = 'huskhomes-fabric'
-                        version = "$rootProject.version+$project.name"
-                        artifact remapJar
                         artifact sourcesJar
                         artifact javadocJar
                     }
