--- a/paper/build.gradle
+++ b/paper/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'xyz.jpenilla.run-paper' version '2.3.1'
 }
 
@@ -6,7 +7,7 @@ dependencies {
     implementation project(':bukkit')
     compileOnly project(':common')
 
-    compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
+    compileOnly 'io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT'
     compileOnly 'org.bstats:bstats-bukkit:3.1.0'
     compileOnly 'org.jetbrains:annotations:26.0.2'
     compileOnly 'net.william278:minedown:1.8.2'
@@ -46,7 +47,7 @@ shadowJar {
 
 tasks {
     runServer {
-        minecraftVersion('1.21.4')
+        minecraftVersion('1.21.10')
 
         downloadPlugins {
             url("https://download.luckperms.net/1571/bukkit/loader/LuckPerms-Bukkit-5.4.154.jar")
